--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,7 +12,10 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:clipToPadding="false"
+        android:background="@android:color/transparent"
+        android:elevation="2dp"
+        app:elevation="2dp">
 
         <android.support.v7.widget.Toolbar
 
@@ -24,7 +27,6 @@
             app:titleTextColor="#FFFFFF">
 
             <RelativeLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -54,10 +56,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="32dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            app:layout_scrollFlags="scroll">
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"
+            app:layout_scrollFlags="scroll"
+            android:background="@android:color/transparent">
 
             <TextView
                 android:id="@+id/saluto_dashboard"
@@ -82,16 +86,23 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ricerca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:clipToPadding="false"
-            android:padding="32dp"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            app:layout_scrollFlags="snap">
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            app:layout_scrollFlags="snap"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:elevation="2dp">
 
-            <EditText
+            <TextView
                 android:id="@+id/ricerca_dashboard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
