--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -61,7 +61,8 @@
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             app:layout_scrollFlags="scroll"
-            android:background="@android:color/transparent">
+            android:background="@android:color/transparent"
+            app:layout_behavior="io.eklesia.eklesia.ChurchProfileImageBehavior">
 
             <TextView
                 android:id="@+id/saluto_dashboard"
@@ -96,8 +97,8 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             app:layout_scrollFlags="snap"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:elevation="2dp">
