--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,10 +12,10 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
         android:background="@android:color/transparent"
-        android:elevation="2dp"
-        app:elevation="2dp">
+        android:clipToPadding="false"
+        android:elevation="0dp"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
 
@@ -23,7 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginRight="16dp"
-            app:layout_scrollFlags="scroll"
+            android:fitsSystemWindows="true"
+            android:gravity="top"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             app:titleTextColor="#FFFFFF">
 
             <RelativeLayout
@@ -55,14 +57,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:fitsSystemWindows="true"
             android:orientation="vertical"
+            android:paddingBottom="24dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
             android:paddingTop="24dp"
-            android:paddingBottom="24dp"
-            app:layout_scrollFlags="scroll"
-            android:background="@android:color/transparent"
-            app:layout_behavior="io.eklesia.eklesia.ChurchProfileImageBehavior">
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
             <TextView
                 android:id="@+id/saluto_dashboard"
@@ -88,26 +91,23 @@
 
         <LinearLayout
             android:id="@+id/ricerca"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom|center_horizontal"
             android:background="@color/colorAccent"
-            android:clipToPadding="false"
-            android:paddingTop="16dp"
+            android:elevation="2dp"
+            android:fitsSystemWindows="true"
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            app:layout_scrollFlags="snap"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:elevation="2dp">
+            android:paddingTop="16dp"
+            app:layout_scrollFlags="snap">
 
             <TextView
                 android:id="@+id/ricerca_dashboard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:hint="Fai una ricerca"/>
 
         </LinearLayout>
@@ -118,22 +118,47 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <EditText
-            style="@style/Base.TextAppearance.AppCompat.Display1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/testo_prova"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/testo_prova"/>
+
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/testo_prova"/>
+
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/testo_prova"/>
+
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/testo_prova"/>
+
+            <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/testo_prova"/>
+        </LinearLayout>
+
+
     </android.support.v4.widget.NestedScrollView>
-
-
-    <!--<android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->
-
 
 </android.support.design.widget.CoordinatorLayout>
