--- a/app/src/main/res/layout/activity_chiesa.xml
+++ b/app/src/main/res/layout/activity_chiesa.xml
@@ -10,97 +10,67 @@
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:clipToPadding="false"
-        app:elevation="3dp">
+        android:background="@android:color/white"
+        android:stateListAnimator="@animator/appbar_always_elevated"
+        >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="360dp"
-            android:background="@android:color/transparent"
             app:contentScrim="@color/colorAccent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="240dp"
                 android:background="@color/colorPrimary"
                 app:layout_collapseMode="parallax"/>
 
 
-
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view"
+            <RelativeLayout
+                android:id="@+id/contenitore_info_chiesa"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_gravity="center_vertical"
-                app:layout_collapseMode="parallax"
-                card_view:cardElevation="0dp"
-                card_view:cardCornerRadius="4dp">
+                android:layout_height="140dp"
+                android:layout_gravity="start"
+                android:layout_marginTop="72dp"
+                android:gravity="center"
+                android:paddingTop="8dp"
+                app:layout_collapseMode="parallax">
 
-                <RelativeLayout
-                    android:id="@+id/materialup.title_container"
+                <LinearLayout
+
                     android:layout_width="match_parent"
-                    android:layout_height="140dp"
-                    android:layout_marginTop="52dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
                     android:gravity="center"
-                    android:paddingTop="8dp"
-                    >
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:text="Chiesa Evangelica bergamo"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                        android:textColor="@android:color/white"
+                        />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Chiesa Evangelica bergamo"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                            />
-                        ​
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:layout_marginTop="4dp"
-                            android:text="Via G. Galli 1"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                            />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Chiama"/>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Localizza"/>
-                    </LinearLayout>
-                    ​
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginTop="4dp"
+                        android:text="Via G. Galli 1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+                        android:textColor="@android:color/white"
+                        />
+                </LinearLayout>
+                ​
 
 
-                    ​
-                </RelativeLayout>
+                ​
+            </RelativeLayout>
 
-
-            </android.support.v7.widget.CardView>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -122,8 +92,8 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-
     </android.support.design.widget.AppBarLayout>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -136,13 +106,48 @@
         android:id="@+id/materialup.profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:elevation="2dp"
+        android:elevation="10dp"
         android:src="@drawable/photo"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
-        app:layout_anchor="@+id/card_view"
+        app:layout_anchor="@+id/contenitore_info_chiesa"
         app:layout_anchorGravity="top|center_horizontal"
         app:layout_scrollFlags="scroll"
 
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="?attr/actionBarSize"
+        android:paddingTop="4dp"
+        android:elevation="8dp"
+        app:layout_anchor="@+id/tabs"
+        app:layout_anchorGravity="top">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Chiama"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Localizza"/>
+        </LinearLayout>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
