--- a/app/src/main/res/layout/fragment_chiese.xml
+++ b/app/src/main/res/layout/fragment_chiese.xml
@@ -9,5 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Chiese"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_add_photo"
+        android:layout_margin="16dp" />
 
 </FrameLayout>
